@@ -2,10 +2,10 @@
 using System.Runtime.CompilerServices;
 
 // This is the real version, displayed in UI and not used for reference purposes.
-[assembly: AssemblyFileVersion("12.1.2")]
+[assembly: AssemblyFileVersion("13.0.0")]
 
 // Only use major version here, with others zero, to avoid breaking references.
-[assembly: AssemblyVersion("12.0.0")]
+[assembly: AssemblyVersion("13.0.0")]
 
 [assembly: AssemblyCompany("Axinom")]
 [assembly: AssemblyProduct("Axinom Toolkit")]
