@@ -1,6 +1,7 @@
 ﻿13.0.0
 	* .NET Framework specific features now require 4.7.2 because it is 2019.
 	* Updated NLog dependency to latest stable.
+	* Added Helpers.Argument.ValidateLength<T>() generic overload.
 
 12.1.2
 	* WeakEventListener is now thread-safe.
